--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "@nestjs/websockets": "~7.6.1",
         "axios": "~0.21.0",
         "dotenv": "~8.2.0",
-        "prompts": "~2.4.0"
+        "prompts": "~2.4.0",
+        "unique-names-generator": "~4.3.1"
     },
     "devDependencies": {
         "@types/node": "~14.14.6",
