--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@nestjs/platform-express": "~7.4.4",
         "@nestjs/websockets": "~7.6.1",
         "axios": "~0.21.0",
+        "benny": "~3.6.15",
         "dotenv": "~8.2.0",
         "prompts": "~2.4.0",
         "unique-names-generator": "~4.3.1"
